Added aggregations for assays and results based on Oki and Ahmed's suggestions.
